--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -34,14 +34,14 @@
 		</li>
 	</ul>
 	<div class="tab-content" id="myTabContent">
-		<div class="tab-pane fade show active container" id="map-cities" role="tabpanel" aria-labelledby="map-cities-tab">
-				<div class="row">
-					<iframe class="map" src="https://klupp.github.io/maps/cities" class="col-xm" style="width: 100%; height: 650px; border: none;"></iframe> 
-				</div>
+		<div class="tab-pane fade show active" id="map-cities" role="tabpanel" aria-labelledby="map-cities-tab">
+			<div class="embed-responsive embed-responsive-21by9">
+				<iframe class="map" src="map_cities.html" class="embed-responsive-item"></iframe> 
+			</div>
 		</div>
-		<div class="tab-pane fade container" id="map-hospitals" role="tabpanel" aria-labelledby="map-hospitals-tab">
-				<div class="row">
-					<iframe class="map" src="https://klupp.github.io/maps/hospitals" class="col-xm" style="width: 100%; height: 650px; border: none;"></iframe> 
+		<div class="tab-pane fade" id="map-hospitals" role="tabpanel" aria-labelledby="map-hospitals-tab">
+				<div class="embed-responsive embed-responsive-21by9">
+					<iframe class="map" src="map_hospitals.html" class="embed-responsive-item"></iframe> 
 				</div>
 		</div>
 		</div>
