--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -36,12 +36,12 @@
 	<div class="tab-content" id="myTabContent">
 		<div class="tab-pane fade show active" id="map-cities" role="tabpanel" aria-labelledby="map-cities-tab">
 			<div class="embed-responsive embed-responsive-21by9">
-				<iframe class="map" src="map_cities.html" class="embed-responsive-item"></iframe> 
+				<iframe class="map" src="https://klupp.github.io/maps/cities" class="embed-responsive-item"></iframe> 
 			</div>
 		</div>
 		<div class="tab-pane fade" id="map-hospitals" role="tabpanel" aria-labelledby="map-hospitals-tab">
 				<div class="embed-responsive embed-responsive-21by9">
-					<iframe class="map" src="map_hospitals.html" class="embed-responsive-item"></iframe> 
+					<iframe class="map" src="https://klupp.github.io/maps/hospitals" class="embed-responsive-item"></iframe> 
 				</div>
 		</div>
 		</div>
