--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -12,11 +12,11 @@
 
 </head>
 <body>
-	<nav aria-label="breadcrumb">
+	<!--<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
 			<li class="breadcrumb-item"><a href="korona.html">Почетна страна</a></li>
 		</ol>
-	</nav>
+	</nav>-->
 	<!-- <div class="p-3 mb-2 bg-info text-black">
 		<div class="jumbotron">
 			<h1 class="display-6">Стастистики за COVID-19 во Република Македонија</h1>
