--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -1,56 +1,144 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Стастистики за COVID-19 во Република Македонија</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"/>
-	<link rel="stylesheet" type="text/css" href="korona.css"/>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <title>Стастистики за COVID-19 во Република Македонија</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"/>
+    <link rel="stylesheet" type="text/css" href="korona.css"/>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-	<title>Статистики за COVID-19 во Република Македонија</title>
+    <title>Статистики за COVID-19 во Република Македонија</title>
 
 </head>
 <body>
-	<!--<nav aria-label="breadcrumb">
-		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="korona.html">Почетна страна</a></li>
-		</ol>
-	</nav>-->
-	<!-- <div class="p-3 mb-2 bg-info text-black">
-		<div class="jumbotron">
-			<h1 class="display-6">Стастистики за COVID-19 во Република Македонија</h1>
-			<p class="lead">-Овде може да погледнете статистики за вирусот COVID-19 поврзани со Репубика Македонија</p>
-			<hr class="my-4">
-			<p>Подолу можете да одберете каков вид на податоци сакате да погледнете</p>
-		</div>
-	</div> -->
-	<ul class="nav nav-tabs" id="map-tab" role="tablist">
-		<li class="nav-item">
-			<a class="nav-link active" id="map-cities-tab" data-toggle="tab" href="#map-cities" role="tab" aria-controls="map-cities" aria-selected="true">Мапа по градови</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="map-hospitals-tab" data-toggle="tab" href="#map-hospitals" role="tab" aria-controls="map-hospitals" aria-selected="false">Мапа по болници</a>
-		</li>
-	</ul>
-	<div class="tab-content" id="myTabContent">
-		<div class="tab-pane fade show active" id="map-cities" role="tabpanel" aria-labelledby="map-cities-tab">
-			<div class="embed-responsive embed-responsive-21by9">
-				<iframe class="map" src="https://klupp.github.io/maps/cities" class="embed-responsive-item"></iframe> 
-			</div>
-		</div>
-		<div class="tab-pane fade" id="map-hospitals" role="tabpanel" aria-labelledby="map-hospitals-tab">
-				<div class="embed-responsive embed-responsive-21by9">
-					<iframe class="map" src="https://klupp.github.io/maps/hospitals" class="embed-responsive-item"></iframe> 
-				</div>
-		</div>
-		</div>
-	</div>
+<!--<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="korona.html">Почетна страна</a></li>
+    </ol>
+</nav>-->
+<!-- <div class="p-3 mb-2 bg-info text-black">
+    <div class="jumbotron">
+        <h1 class="display-6">Стастистики за COVID-19 во Република Македонија</h1>
+        <p class="lead">-Овде може да погледнете статистики за вирусот COVID-19 поврзани со Репубика Македонија</p>
+        <hr class="my-4">
+        <p>Подолу можете да одберете каков вид на податоци сакате да погледнете</p>
+    </div>
+</div> -->
+<!--<ul class="nav nav-tabs" id="map-tab" role="tablist">-->
+<!-- <li class="nav-item">-->
+<!--  <a class="nav-link active" id="map-cities-tab" data-toggle="tab" href="#map-cities" role="tab" aria-controls="map-cities" aria-selected="true">Мапа по градови</a>-->
+<!-- </li>-->
+<!-- <li class="nav-item">-->
+<!--  <a class="nav-link" id="map-hospitals-tab" data-toggle="tab" href="#map-hospitals" role="tab" aria-controls="map-hospitals" aria-selected="false">Мапа по болници</a>-->
+<!-- </li>-->
+<!--</ul>-->
+<!--<div class="tab-content" id="myTabContent">-->
+<!-- <div class="tab-pane fade show active" id="map-cities" role="tabpanel" aria-labelledby="map-cities-tab">-->
+<div class="container">
+    <div class="row">
+        <div class="col-xl-8 offset-xl-2 col-md-10 offset-md-1 col-sm-12 mb-2 mt-2">
+            <h2>Статистики за COVID-19 во Македонија</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xl-2 col-md-1 col-sm-0">
+            <div class="container">
+                <div class="row">
+                    <h4>Вкупно:</h4><h4 id="total-count"></h4>
+                </div>
+                <div class="row">
+                    <h4>Активни:</h4><h4 id="active-count"></h4>
+                </div>
+                <div class="row">
+                    <h4>Оздравени:</h4><h4 id="recovered-count"></h4>
+                </div>
+                <div class="row">
+                    <h4>Мртви:</h4><h4 id="dead-count"></h4>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-8 col-md-10 col-sm-12">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="map embed-responsive-item" src="https://klupp.github.io/maps/cities"></iframe>
+            </div>
+        </div>
+        <div class="col-xl-2 col-md-1 col-sm-0">
+            <div class="container">
+                <div class="row">
+                    <h6>Податоците се достапни <a href="https://github.com/klupp/opendata" target="_blank">тука</a>.</h6>
+                </div>
+<!--                <div class="row">-->
+<!--                    <h6>Статистики може да се видат на:</h6>-->
+<!--                </div>-->
+            </div>
+        </div>
+    </div>
+</div>
+<!-- </div>-->
+<!-- <div class="tab-pane fade" id="map-hospitals" role="tabpanel" aria-labelledby="map-hospitals-tab">-->
+<!--  <div class="embed-responsive embed-responsive-21by9">-->
+<!--   <iframe class="map" src="https://klupp.github.io/maps/hospitals" class="embed-responsive-item"></iframe>-->
+<!--  </div>-->
+<!-- </div>-->
+<!--</div>-->
+<!--</div>-->
 
-	<script type="text/javascript">
-		$('#map-tab a').on('click', function (e) {
-			e.preventDefault()
-			$(this).tab('show')
-		})
-	</script>
+<script type="text/javascript">
+    $('#map-tab a').on('click', function (e) {
+        e.preventDefault();
+        $(this).tab('show')
+    });
+
+    $(document).ready(function() {
+        $.ajax({
+            type: "GET",
+            url: "https://raw.githubusercontent.com/klupp/opendata/master/mk/covid19/datasets/summary_by_municipality.csv",
+            dataType: "text",
+            success: function(data) { processData(data); },
+            error: function (xhr) {
+                alert(xhr.statusText);
+            }
+        });
+    });
+
+
+    function processData(allText) {
+        const record_num = 5;  // or however many elements there are in each row
+        const allTextLines = allText.split(/\r\n|\n/);
+        const headings = allTextLines[0].split(',');
+
+        let total = 0;
+        let recovered = 0;
+        let dead = 0;
+        // const headings = entries.splice(0, record_num);
+        // console.log(allTextLines);
+        for (let i=1; i<allTextLines.length; i++) {
+            const entries = allTextLines[i].split(',');
+            console.log(entries);
+            for (let j=0; j<entries.length; j++) {
+                if (headings[j]==='count_dead')
+                    dead += parseInt(entries[j]);
+                if (headings[j]==='count_healed')
+                    recovered += parseInt(entries[j]);
+                if (headings[j]==='count_infected')
+                    total += parseInt(entries[j]);
+            }
+        }
+        const active = total - (recovered + dead);
+
+        document.getElementById('total-count').innerHTML=total;
+        document.getElementById('active-count').innerHTML=active;
+        document.getElementById('recovered-count').innerHTML=recovered;
+        document.getElementById('dead-count').innerHTML=dead;
+    }
+</script>
 </body>
