--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -4,7 +4,6 @@
     <title>Стастистики за COVID-19 во Република Македонија</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"/>
-    <link rel="stylesheet" type="text/css" href="korona.css"/>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
@@ -43,11 +42,11 @@
 <!--</ul>-->
 <!--<div class="tab-content" id="myTabContent">-->
 <!-- <div class="tab-pane fade show active" id="map-cities" role="tabpanel" aria-labelledby="map-cities-tab">-->
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 col-lg-10 offset-lg-1">
             <h1>Статистики за COVID-19 во Македонија</h1>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="container col-lg-3 col-12">
                         <div class="row">
