--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -44,46 +44,51 @@
 <!-- <div class="tab-pane fade show active" id="map-cities" role="tabpanel" aria-labelledby="map-cities-tab">-->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 col-lg-10 offset-lg-1">
-            <h1>Статистики за COVID-19 во Македонија</h1>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="container col-lg-3 col-12">
+        <div class="col-12 col-lg-10 offset-lg-1 container-fluid">
+            <div class="row">
+                <h1 class="col-12 mb-5">Статистики за COVID-19 во Македонија</h1>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="container-fluid">
                         <div class="row">
-                            <div class="col-lg-4 col-2" style="color: darkgoldenrod">
-                                <h3 id="active-count"></h3>
+                            <div class="container col-lg-3 col-12">
+                                <div class="row">
+                                    <div class="col-lg-4 col-2" style="color: darkgoldenrod">
+                                        <h3 id="active-count"></h3>
+                                    </div>
+                                    <div class="col-lg-8 col-4" style="color: darkgoldenrod">
+                                        <h3>Активни</h3>
+                                    </div>
+                                    <div class="col-lg-4 col-2" style="color: darkred">
+                                        <h3 id="total-count"></h3>
+                                    </div>
+                                    <div class="col-lg-8 col-4" style="color: darkred">
+                                        <h3>Заразени</h3>
+                                    </div>
+                                    <div class="col-lg-4 col-2" style="color: darkgreen">
+                                        <h3 id="recovered-count"></h3>
+                                    </div>
+                                    <div class="col-lg-8 col-4" style="color: darkgreen">
+                                        <h3>Излечени</h3>
+                                    </div>
+                                    <div class="col-lg-4 col-2" style="color: black">
+                                        <h3 id="dead-count"></h3>
+                                    </div>
+                                    <div class="col-lg-8 col-4" style="color: black">
+                                        <h3>Мртви</h3>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-lg-8 col-4" style="color: darkgoldenrod">
-                                <h3>Активни</h3>
-                            </div>
-                            <div class="col-lg-4 col-2" style="color: darkred">
-                                <h3 id="total-count"></h3>
-                            </div>
-                            <div class="col-lg-8 col-4" style="color: darkred">
-                                <h3>Заразени</h3>
-                            </div>
-                            <div class="col-lg-4 col-2" style="color: darkgreen">
-                                <h3 id="recovered-count"></h3>
-                            </div>
-                            <div class="col-lg-8 col-4" style="color: darkgreen">
-                                <h3>Излечени</h3>
-                            </div>
-                            <div class="col-lg-4 col-2" style="color: black">
-                                <h3 id="dead-count"></h3>
-                            </div>
-                            <div class="col-lg-8 col-4" style="color: black">
-                                <h3>Мртви</h3>
+                            <div class="col-lg-9 col-12">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="map embed-responsive-item" src="https://klupp.github.io/maps/cities"></iframe>
+                                </div>
+                                <h6>Податоците се достапни <a href="https://github.com/klupp/opendata" target="_blank">тука</a>.</h6>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-9 col-12">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="map embed-responsive-item" src="https://klupp.github.io/maps/cities"></iframe>
-                        </div>
-                        <h6>Податоците се достапни <a href="https://github.com/klupp/opendata" target="_blank">тука</a>.</h6>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
