--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -82,7 +82,7 @@
                             </div>
                             <div class="col-lg-9 col-12">
                                 <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe class="map embed-responsive-item" src="https://klupp.github.io/maps/cities"></iframe>
+                                    <iframe class="map embed-responsive-item" src="https://klupp.github.io/COVID19/Macedonia/maps/map.html"></iframe>
                                 </div>
                                 <h6>Податоците се достапни <a href="https://github.com/klupp/opendata" target="_blank">тука</a>.</h6>
                             </div>
