--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -46,7 +46,7 @@
     <div class="row">
         <div class="col-12 col-lg-10 offset-lg-1 container-fluid">
             <div class="row">
-                <h1 class="col-12 mb-5">Статистики за COVID-19 во Македонија</h1>
+                <h1 class="col-12 mb-5 mt-3">Статистики за COVID-19 во Македонија</h1>
             </div>
             <div class="row">
                 <div class="col-12">
