Hospital icon fixed.

--- a/COVID19/Macedonia/maps/map.html
+++ b/COVID19/Macedonia/maps/map.html
@@ -249,7 +249,7 @@
                 scale = Math.log10(feature.properties.count + 1) + 1;
                 console.log(scale);
                 return L.marker(latlng, {icon: L.icon({
-                        iconUrl: 'https://klupp.github.io/COVID19/Macedonia/maps/map.html/hospital.png',
+                        iconUrl: 'https://github.com/klupp/klupp.github.io/raw/master/COVID19/Macedonia/maps/hospital.png',
                         iconSize: [10 * scale, 10 * scale],
                         shadowSize: [10, 10],
                     })});
