cases-by-country-lineplot added to the main page

--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="mk">
 <head>
-    <title>Стастистики за COVID-19 во Република Македонија</title>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"/>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -15,38 +15,15 @@
             crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    <title>Статистики за COVID-19 во Република Македонија</title>
+    <title>Мапа за COVID-19 во Република Македонија</title>
 
 </head>
 <body>
-<!--<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="korona.html">Почетна страна</a></li>
-    </ol>
-</nav>-->
-<!-- <div class="p-3 mb-2 bg-info text-black">
-    <div class="jumbotron">
-        <h1 class="display-6">Стастистики за COVID-19 во Република Македонија</h1>
-        <p class="lead">-Овде може да погледнете статистики за вирусот COVID-19 поврзани со Репубика Македонија</p>
-        <hr class="my-4">
-        <p>Подолу можете да одберете каков вид на податоци сакате да погледнете</p>
-    </div>
-</div> -->
-<!--<ul class="nav nav-tabs" id="map-tab" role="tablist">-->
-<!-- <li class="nav-item">-->
-<!--  <a class="nav-link active" id="map-cities-tab" data-toggle="tab" href="#map-cities" role="tab" aria-controls="map-cities" aria-selected="true">Мапа по градови</a>-->
-<!-- </li>-->
-<!-- <li class="nav-item">-->
-<!--  <a class="nav-link" id="map-hospitals-tab" data-toggle="tab" href="#map-hospitals" role="tab" aria-controls="map-hospitals" aria-selected="false">Мапа по болници</a>-->
-<!-- </li>-->
-<!--</ul>-->
-<!--<div class="tab-content" id="myTabContent">-->
-<!-- <div class="tab-pane fade show active" id="map-cities" role="tabpanel" aria-labelledby="map-cities-tab">-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 col-lg-10 offset-lg-1 container-fluid">
             <div class="row">
-                <h1 class="col-12 mb-5 mt-3">Статистики за COVID-19 во Македонија</h1>
+                <h1 class="col-12 mb-5 mt-3">Мапа за COVID-19 во Македонија</h1>
             </div>
             <div class="row">
                 <div class="col-12">
@@ -90,23 +67,22 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <h1 class="col-12 mb-5 mt-3">Статистики за COVID-19 во Македонија</h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-10 col-12 offset-lg-1">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="map embed-responsive-item" src="https://klupp.github.io/COVID19/Macedonia/statistics/cases-by-country-lineplot.html"></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<!-- </div>-->
-<!-- <div class="tab-pane fade" id="map-hospitals" role="tabpanel" aria-labelledby="map-hospitals-tab">-->
-<!--  <div class="embed-responsive embed-responsive-21by9">-->
-<!--   <iframe class="map" src="https://klupp.github.io/maps/hospitals" class="embed-responsive-item"></iframe>-->
-<!--  </div>-->
-<!-- </div>-->
-<!--</div>-->
-<!--</div>-->
+
 
 <script type="text/javascript">
-    $('#map-tab a').on('click', function (e) {
-        e.preventDefault();
-        $(this).tab('show')
-    });
 
     $(document).ready(function() {
         $.ajax({
@@ -122,18 +98,14 @@
 
 
     function processData(allText) {
-        const record_num = 5;  // or however many elements there are in each row
         const allTextLines = allText.split(/\r\n|\n/);
         const headings = allTextLines[0].split(',');
 
         let total = 0;
         let recovered = 0;
         let dead = 0;
-        // const headings = entries.splice(0, record_num);
-        // console.log(allTextLines);
         for (let i=1; i<allTextLines.length; i++) {
             const entries = allTextLines[i].split(',');
-            console.log(entries);
             for (let j=0; j<entries.length; j++) {
                 if (headings[j]==='count_dead')
                     dead += parseInt(entries[j]);
