accidentally the hide class was removed

--- a/COVID19/Macedonia/statistics/cases-by-country-lineplot.html
+++ b/COVID19/Macedonia/statistics/cases-by-country-lineplot.html
@@ -58,6 +58,9 @@ div#notebook {
     <!-- End of mathjax configuration -->
 
 <style>
+    .cell.nbinteract-hide_in > .input {
+        display: none;
+    }
 
     .cell.nbinteract-hide_out > .output_wrapper {
             display: none;
@@ -78,8 +81,7 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container">
 
-        <div class="nbinteract-hide_in
-      cell border-box-sizing code_cell rendered">
+        <div class="cell nbinteract-hide_in border-box-sizing code_cell rendered">
             <div class="input">
 
                 <div class="inner_cell">
@@ -104,8 +106,7 @@ div#notebook {
 
 
 
-        <div class="nbinteract-hide_in
-      cell border-box-sizing code_cell rendered">
+        <div class="nbinteract-hide_in cell border-box-sizing code_cell rendered">
             <div class="input">
 
                 <div class="inner_cell">
@@ -125,8 +126,7 @@ div#notebook {
 
 
 
-        <div class="nbinteract-hide_in
-      cell border-box-sizing code_cell rendered">
+        <div class="nbinteract-hide_in cell border-box-sizing code_cell rendered">
             <div class="input">
 
                 <div class="inner_cell">
@@ -155,8 +155,7 @@ div#notebook {
 
 
 
-        <div class="nbinteract-hide_in
-      cell border-box-sizing code_cell rendered">
+        <div class="nbinteract-hide_in cell border-box-sizing code_cell rendered">
             <div class="input">
 
                 <div class="inner_cell">
@@ -201,8 +200,7 @@ div#notebook {
 
 
 
-        <div class="nbinteract-hide_in
-      cell border-box-sizing code_cell rendered">
+        <div class="nbinteract-hide_in cell border-box-sizing code_cell rendered">
             <div class="input">
 
                 <div class="inner_cell">
@@ -246,8 +244,7 @@ div#notebook {
 
 
 
-        <div class="nbinteract-hide_in
-      cell border-box-sizing code_cell rendered">
+        <div class="nbinteract-hide_in cell border-box-sizing code_cell rendered">
             <div class="input">
 
                 <div class="inner_cell">
