explanation for the statistic added

--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -72,8 +72,18 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-12 offset-lg-1">
-                    <div class="embed-responsive embed-responsive-1by1">
-                        <iframe class="map embed-responsive-item" src="https://klupp.github.io/COVID19/Macedonia/statistics/cases-by-country-lineplot.html"></iframe>
+                    <div class="row">
+                        <p class="text-justify">
+                            Споредба на равој на корона вирусот во различни држави од појавувањето на првиот случај во таа држава.
+                            За да споредите по повеќе држави селектирајте
+                            ги од листата (доколку сте од компјутер ова може да го направите држејќи го Ctrl копчето). Доколку сакате подетално да погледнете што се
+                            случувало во одредени денови, изберете ранг на денови користејќи го слајдерот.
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="embed-responsive embed-responsive-1by1">
+                            <iframe class="map embed-responsive-item" src="https://klupp.github.io/COVID19/Macedonia/statistics/cases-by-country-lineplot.html"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
