--- a/COVID19/Macedonia/maps/map.html
+++ b/COVID19/Macedonia/maps/map.html
@@ -284,7 +284,7 @@
         };
 
         var geoJsonLayerr = {
-            "Оптини": geojson
+            "Општини": geojson
         };
 
         var hospitalsGeoJsonLayerr = {
