--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -19,6 +19,11 @@
 
 </head>
 <body>
+<nav class="nav nav-dark bg-dark" style="background-color:#333">
+    <font size="5"><a class="nav-link" href="#" style="color:#FFFFFF">Почетна</a></font>
+    <font size="5"><a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/pages/covid19" style="color:#FFFFFF">За COVID19</a></font>
+</nav>
+<br>
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 col-lg-10 offset-lg-1 container-fluid">
