Fix covid19 info

--- a/COVID19/Macedonia/pages/covid19.html
+++ b/COVID19/Macedonia/pages/covid19.html
@@ -11,12 +11,12 @@
 <body>
 <nav class="nav nav-dark bg-dark" style="background-color:#333">
     <font size="5"><a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/" style="color:#FFFFFF">Почетна</a></font>
-    <font size="5"><a class="nav-link" href="#" style="color:#FFFFFF">За COVID19</a></font>
+    <font size="5"><a class="nav-link" href="#" style="color:#FFFFFF">COVID19 Инфо</a></font>
 </nav>
 <br>
 <div class="container">
     <div class="row">
-        <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 col-12 offset-0">
+        <div class="col-12 offset-0">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 pr-3">
