--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -21,7 +21,7 @@
 <body>
 <nav class="nav nav-dark bg-dark" style="background-color:#333">
     <font size="5"><a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/" style="color:#FFFFFF">Почетна</a></font>
-    <font size="5"><a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/pages/covid19" style="color:#FFFFFF">За COVID19</a></font>
+    <font size="5"><a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/pages/covid19" style="color:#FFFFFF">COVID19 <Инфо></Инфо></a></font>
 </nav>
 <br>
 <div class="container-fluid">
