--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -20,8 +20,8 @@
 </head>
 <body>
 <nav class="nav nav-dark bg-dark" style="background-color:#333">
-    <font size="5"><a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/" style="color:#FFFFFF">Почетна</a></font>
-    <font size="5"><a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/pages/covid19" style="color:#FFFFFF">COVID19 <Инфо></Инфо></a></font>
+    <a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/" style="color:#FFFFFF">Почетна</a><
+    <a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/pages/covid19" style="color:#FFFFFF">COVID19 <Инфо></Инфо></a>
 </nav>
 <br>
 <div class="container-fluid">
