Fix Covid19 Инфо

--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <nav class="nav nav-dark bg-dark" style="background-color:#333">
-    <a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/" style="color:#FFFFFF">Почетна</a><
+    <a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/" style="color:#FFFFFF">Почетна</a>
     <a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/pages/covid19" style="color:#FFFFFF">COVID19 Инфо</a>
 </nav>
 <br>
