--- a/COVID19/Macedonia/pages/covid19.html
+++ b/COVID19/Macedonia/pages/covid19.html
@@ -17,7 +17,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 offset-0">
-            <div class="container">
+            <div class="container mb-5">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 pr-3">
                         <div class="embed-responsive embed-responsive-16by9">
