--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -66,7 +66,10 @@
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <iframe class="map embed-responsive-item" src="https://klupp.github.io/COVID19/Macedonia/maps/map.html"></iframe>
                                 </div>
-                                <h6>Податоците се достапни <a href="https://github.com/klupp/opendata" target="_blank">тука</a>.</h6>
+                                <h6>
+                                    Благодарност до Матеа Пеева и Мирослав Кузманоски за собирање на податоците, кои се достапни
+                                    <a href="https://github.com/klupp/opendata" target="_blank">тука</a>.
+                                </h6>
                             </div>
                         </div>
                     </div>
