--- a/COVID19/Macedonia/index.html
+++ b/COVID19/Macedonia/index.html
@@ -20,8 +20,9 @@
 </head>
 <body>
 <nav class="nav nav-dark bg-dark" style="background-color:#333">
-    <a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/" style="color:#FFFFFF">Почетна</a>
-    <a class="nav-link" href="https://klupp.github.io/COVID19/Macedonia/pages/covid19" style="color:#FFFFFF">COVID19 Инфо</a>
+    <a class="nav-link" href="." style="color:#FFFFFF">Мапа</a>
+    <a class="nav-link" href="./pages/statistics.html" style="color:#FFFFFF">Статистики</a>
+    <a class="nav-link" href="./pages/covid19.html" style="color:#FFFFFF">COVID19 Инфо</a>
 </nav>
 <br>
 <div class="container-fluid">
@@ -72,22 +73,6 @@
                                 </h6>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <h1 class="col-12 mb-5 mt-3">Статистики за COVID-19 во Македонија</h1>
-            </div>
-            <div class="row">
-                <div class="col-lg-10 col-12 offset-lg-1">
-                    <p class="text-justify">
-                        Споредба на равој на корона вирусот во различни држави од појавувањето на првиот случај во таа држава.
-                        За да споредите по повеќе држави селектирајте
-                        ги од листата (доколку сте од компјутер ова може да го направите држејќи го Ctrl копчето). Доколку сакате подетално да погледнете што се
-                        случувало во одредени денови, изберете ранг на денови користејќи го слајдерот.
-                    </p>
-                    <div class="embed-responsive embed-responsive-1by1">
-                        <iframe class="map embed-responsive-item" src="https://klupp.github.io/COVID19/Macedonia/statistics/cases-by-country-lineplot.html"></iframe>
                     </div>
                 </div>
             </div>
