tests vs sick statistic added

--- a/COVID19/Macedonia/pages/statistics.html
+++ b/COVID19/Macedonia/pages/statistics.html
@@ -42,6 +42,22 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="row">
+		<div class="col-lg-10 col-12 offset-lg-1">
+			<p class="text-justify">
+				Споредба на бројот на тестови направени во даден ден со број на новозаболени во истиот ден.
+				Дополнително со линиски дијаграм е исцртан и процентот на новозаболените во однос на направените тестови во специфичен ден.
+				Доколку сакате да погледнете само одредени дијаграми користете ја листата
+				(доколку сте од компјутер ова може да го направите држејќи го Ctrl копчето).
+				Доколку сакате подетално да погледнете што се
+				случувало во одредени денови, изберете ранг на денови користејќи го слајдерот.
+			</p>
+			<div class="embed-responsive embed-responsive-1by1">
+				<iframe class="map embed-responsive-item" src="../statistics/tests-vs-sick-lineplot.html"></iframe>
+			</div>
+		</div>
+	</div>
 </div>
 
 </body>
